Double-clicking on the border can undo a maximization.

--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -1187,14 +1187,17 @@ When they start to flash, release the button to merge the frame tabs.
 
 =back
 
-The title frame of a window also listens for mouse clicks.  Left double
-clicking maximizes the window (C<TitleBarMaximizeButton=1>). Press
-Shift to only maximize vertically. Press Alt+Shift for horizontally.
+The title frame of a window also listens for mouse clicks.  A left
+double-click maximizes the window (C<TitleBarMaximizeButton=1>).
+When Shift is also pressed it only maximizes vertically.
+Press Alt+Shift to maximize horizontally.
+
 Middle double-clicking rolls up the window (C<TitleBarRollupButton=2>).
 Also press Shift to maximize horizontally. If B<TitleBarRollupButton>
 is either 4 or 5 then the scroll wheel controls rolling up or down.
-Pressing a mouse button and moving it will move the window.
-C<Alt+Pointer_Button1> lowers the window.
+
+Press a mouse button on the title bar and drag it to move the window.
+A C<Alt+Pointer_Button1> click lowers the window.
 
 When the mouse is on the window frame then a left click raises the
 window.  Dragging with the left button down resizes the window.
@@ -1202,7 +1205,8 @@ Clicking the right button pops up the context menu.  Dragging with the
 right button moves the window.
 
 Double-clicking on the frame border (or corner) maximizes just that side
-of the window. Another double-click restores that side.
+of the window. Another double-click restores that side. Double-clicking
+on the border can also undo a maximization in that dimension.
 
 Clicking on the desktop activates a menu.  The middle button shows the
 window list (C<DesktopWinListButton=2>).  The right button shows the
