--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -685,8 +685,8 @@ Clock Date format for tooltip (strftime format string).
 =item B<DockApps>="right high desktop"
 
 Support DockApps (right, left, center, down, high, above, dock, ontop,
-normal, below, desktop, or empty to disable).  Control with Ctrl+Mouse.
-The first five control positioning, while the next six set the layer.
+normal, below, desktop, or empty to disable). The first five control
+positioning, while the next six set the layer. Control with Ctrl+Mouse.
 
 =item B<XRRPrimaryScreenName>=""
 
