--- a/man/icewm-menu-fdo.pod
+++ b/man/icewm-menu-fdo.pod
@@ -66,13 +66,31 @@ Use I<NAME> to start a terminal emulator that supports the '-e' option.
 =item B<-s>, B<--no-lone-app>
 
 Attempt to detect a single application with no other content in lower
-submenus and move this one to the parent submenu. Limitations: this
-looks only one level below, multiple moving is not supported yet.
+submenus and move this one to the parent submenu. This also detects
+menus with just one submenu inside, attempting to move it's application
+items to the parent menu where possible.
 
 =item B<-S>, B<--no-lone-hint>
 
 Decorate app entries moved by the B<-s> option with a hint about the
 original menu where it would be displayed otherwise. Implies B<-s>.
+
+=item B<-d TIMEOUT>, B<--deadline-apps=TIMEOUT>
+
+Specifies a certain timeout value in milliseconds, so that the reading
+of *.desktop files (for applications) is aborted by that time (or soon
+after). This can help to avoid extended blocking of the caller.
+Also see B<-D> for the subsequent operation.
+
+=item B<-D TIMEOUT>, B<--deadline-all=TIMEOUT>
+
+Specifies a total timeout in milliseconds after which the application
+has to terminate, regardless of the final menu construction and
+decoration reading (applied after *.desktop file reading) was finished
+or not. This would cause a printing of menu contents which were
+calculated so far, therefore the timeout should be set a certain time
+before the actual hard deadline by which the program should be
+terminated. The output may lack translations and icons.
 
 =item B<--flat>
 
